--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,23 @@
     @@include('html/partials/header.html')
 
     <!-- main -->
-    <main></main>
+    <main class="main">
+        <div class="intro">
+            <div class="container">
+                <div class="intro__inner">
+                    <div class="intro__text-block">
+                        <h1 class="intro__title">RAY AIR POCKET</h1>
+                        <p class="intro__text">INFLATABLE SUP BOARD</p>
+                        <p class="intro__text">SIZES: 11'6"X31"</p>
+                    </div>
+
+                    <p class="intro__text-decor intro__text-decor-1">DOM</p>
+                    <p class="intro__text-decor intro__text-decor-2">FREE</p>
+                    <p class="intro__text-decor intro__text-decor-3">PACK SMALL FOR BIG ADVENTURES</p>
+                </div>
+            </div>
+        </div>
+    </main>
     <!-- footer include -->
     @@include('html/partials/footer.html')
 
