--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 
     <!-- main -->
     <main class="main">
+        <!-- intro -->
         <div class="intro">
             <div class="container">
                 <div class="intro__inner">
@@ -26,7 +27,89 @@
                     <p class="intro__text-decor intro__text-decor-3">PACK SMALL FOR BIG ADVENTURES</p>
                 </div>
             </div>
-        </div>
+        </div> <!-- close intro-->
+
+        <!-- section -->
+        <section class="section section--info">
+            <div class="container">
+                <div class="section__inner">
+                    <div class="section__content">
+                        <div class="info__top">
+                            <p class="info__top-text info__top-text--one">
+                                After our well received Fly Air Pocket Edition we’re adding the respective touring iSUP
+                                to our Range – the Ray Air Pocket Edition! The ultra travel-friendly touring iSUP is
+                                built in a tough but light construction that allows it to be packed into a backpack half
+                                the size of a regular iSUP.
+                                <button class="btn btn--play">
+                                    <svg width="70" height="70" viewBox="0 0 70 70" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M52.6733 34.5L26.1634 49.6554V19.3446L52.6733 34.5Z" fill="white" />
+                                        <circle cx="35" cy="35" r="34" stroke="white" stroke-width="2" />
+                                    </svg>
+
+
+                                    <span>Play video</span>
+                                </button>
+                            </p>
+                            <p class="info__top-text info__top-text--two">
+                                With a thinner deck pad and tough but flexible construction, the Ray Air Pocket Edition
+                                can be rolled and packed into a much narrower bag, making it extremely easy to store and
+                                transport. Based on our highly versatile Ray Air 11’6’’, the efficient shape is packed
+                                with volume - offering safe, stable paddling and superb glide – which makes it the
+                                perfect iSUP for everyone paddling some distance. With its minimal weight and dimensions
+                                nothing comes close the convenient handling of our Pocket Edition iSUPs!
+                            </p>
+                            <img src="img/info/supboards.png" class="info__top-img" alt="supboards">
+                        </div>
+
+                        <div class="info__specs">
+                            <h2 class="info__specs-title">
+                                Specs
+                            </h2>
+
+                            <ul class="info__specs-list">
+                                <li class="info__specs-item">
+                                    <p class="info__specs-item-title">BOARD</p>
+                                    <p class="info__specs-item-text">RAY AIR POCKET 11'6"X31"</p>
+                                </li>
+                                <li class="info__specs-item">
+                                    <p class="info__specs-item-title">VOLUME</p>
+                                    <p class="info__specs-item-text">299 L</p>
+                                </li>
+                                <li class="info__specs-item">
+                                    <p class="info__specs-item-title">WIDTH</p>
+                                    <p class="info__specs-item-text">31" / 78.7 CM</p>
+                                </li>
+                                <li class="info__specs-item">
+                                    <p class="info__specs-item-title">LENGTH</p>
+                                    <p class="info__specs-item-text">11'6'' / 350.5 CM</p>
+                                </li>
+                                <li class="info__specs-item">
+                                    <p class="info__specs-item-title">THICKNESS</p>
+                                    <p class="info__specs-item-text">6” / 15 CM</p>
+                                </li>
+                                <li class="info__specs-item">
+                                    <p class="info__specs-item-title">WEIGHT</p>
+                                    <p class="info__specs-item-text">8.5 KG</p>
+                                </li>
+                                <li class="info__specs-item">
+                                    <p class="info__specs-item-title">FITTINGS</p>
+                                    <p class="info__specs-item-text">2X FCS FIN SYSTEM / 2 X 4.5" CLICK FIN</p>
+                                </li>
+                                <li class="info__specs-item">
+                                    <p class="info__specs-item-title">REC. USER WEIGHT</p>
+                                    <p class="info__specs-item-text">UP TO 100 KG</p>
+                                </li>
+                                <li class="info__specs-item">
+                                    <p class="info__specs-item-title">MASTFOOT INSERT</p>
+                                    <p class="info__specs-item-text">NO</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- footer include -->
     @@include('html/partials/footer.html')
