info, buy blocks

--- a/src/index.html
+++ b/src/index.html
@@ -110,6 +110,71 @@
                 </div>
             </div>
         </section>
+
+        <!-- buy section -->
+        <section class="section section--buy">
+            <div class="container">
+                <div class="section__inner">
+                    <h2 class="section__title">
+                        Ray Air Pocket
+                    </h2>
+                    <div class="section__content">
+                        <div class="buy__text-block">
+                            <ul class="buy__text-block-list">
+                                <li class="buy__text-block-item">
+                                    <span class="buy__text-block-item-title">CLICK FINS
+                                    </span>
+                                    <p class="buy__text-block-item-text">
+                                        Comes with two 4.5’’ Click Fins – no tools required – fit and remove in seconds
+                                    </p>
+                                </li>
+                                <li class="buy__text-block-item">
+                                    <span class="buy__text-block-item-title">REDUCED DECK PAD
+                                    </span>
+                                    <p class="buy__text-block-item-text">
+                                        Reduced area deck pad in standing area to aid packing
+                                    </p>
+                                </li>
+                                <li class="buy__text-block-item">
+                                    <span class="buy__text-block-item-title">BACKPACK
+
+                                    </span>
+                                    <p class="buy__text-block-item-text">
+                                        Compact Pocket backpack with easy entry zipper for board, paddle, pump and
+                                        accessories (fits paddle and also regular pump)
+                                    </p>
+                                </li>
+                                <li class="buy__text-block-item">
+                                    <span class="buy__text-block-item-title">TOURING SHAPE
+
+                                    </span>
+                                    <p class="buy__text-block-item-text">
+                                        Tried and tested shape based on our popular Ray Air 11’6’’
+                                    </p>
+                                </li>
+                                <li class="buy__text-block-item">
+                                    <span class="buy__text-block-item-title">EXTREMELY PORTABLE
+
+                                    </span>
+                                    <p class="buy__text-block-item-text">
+                                        Extremely portable, the ultimate travel companion
+                                    </p>
+                                </li>
+                            </ul>
+
+                            <button type="button" class="btn btn--buy">BUY</button>
+
+
+                            <div class="buy__text-block-price">
+                                <span class="buy__text-block-price-value">590 €</span>
+                            </div>
+
+                        </div>
+                        <img src="img/buy/buy-package.jpg" class="buy__image" alt="supboard package">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- footer include -->
     @@include('html/partials/footer.html')
