--- a/src/index.html
+++ b/src/index.html
@@ -175,6 +175,69 @@
                 </div>
             </div>
         </section>
+
+        <!-- section tech -->
+        <section class="section section--tech">
+            <div class="tech__top">
+                <div class="container">
+                    <div class="tech__inner">
+                        <h1 class="section__title">MICRO TECHNOLOGY</h1>
+                        <ol class="tech__list">
+                            <li class="tech__list-item">First PVC rail layer </li>
+                            <li class="tech__list-item">Second PVC rail layer</li>
+                            <li class="tech__list-item">Thin diamond grooving split-pad</li>
+                            <li class="tech__list-item">Strong Tarpaulin layer </li>
+                            <li class="tech__list-item">V-Drop Stitch core</li>
+                        </ol>
+
+                        <button class="btn btn--play tech__play-btn">
+                            <svg width="70" height="70" viewBox="0 0 70 70" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path d="M52.6733 34.5L26.1634 49.6554V19.3446L52.6733 34.5Z" fill="white" />
+                                <circle cx="35" cy="35" r="34" stroke="white" stroke-width="2" />
+                            </svg>
+                            <span>Play video</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="gallery">
+                <div class="container">
+                    <div class="gallery__inner">
+                        <div class="gallery__small">
+
+                            <p class="gallery__small-text">
+                                Our new Micro technology provides a featherweight and quality construction that can
+                                be rolled and packed into a backpack half the width of a standard iSUP package. The
+                                reduced pad and our twin Click Fin system make it possible to have a regular sized
+                                iSUP packed into minimal space.
+                            </p>
+                            <div class="gallery__small-image-block">
+                                <img src="img/gallery/small/1.jpg" class="gallery__small-image gallery__small-image--1"
+                                    alt="">
+                                <img src="img/gallery/small/2.jpg" class="gallery__small-image gallery__small-image--2"
+                                    alt="">
+                                <img src="img/gallery/small/3.jpg" class="gallery__small-image gallery__small-image--3"
+                                    alt="">
+                            </div>
+                        </div>
+
+                        <div class="gallery__big">
+                            <img src="img/gallery/big/1.jpg" class="gallery__big-image gallery__big-image--1" alt="">
+                            <img src="img/gallery/big/2.jpg" class="gallery__big-image gallery__big-image--2" alt="">
+                            <img src="img/gallery/big/3.jpg" class="gallery__big-image gallery__big-image--3" alt="">
+                            <img src="img/gallery/big/4.jpg" class="gallery__big-image gallery__big-image--4" alt="">
+                            <img src="img/gallery/big/5.jpg" class="gallery__big-image gallery__big-image--5" alt="">
+                            <span class="gallery__big-text" alt="">Enjoy
+                                <br /> your life
+                            </span>
+
+                            <img src="img/gallery/big/7.jpg" class="gallery__big-image gallery__big-image--6" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- footer include -->
     @@include('html/partials/footer.html')
