--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,10 @@
                                 perfect iSUP for everyone paddling some distance. With its minimal weight and dimensions
                                 nothing comes close the convenient handling of our Pocket Edition iSUPs!
                             </p>
-                            <img src="img/info/supboards.png" class="info__top-img" alt="supboards">
+                            <picture>
+                                <source srcset="img/info/supboards.webp" type="image/webp">
+                                <img src="img/info/supboards.png" class="info__top-img" alt="supboards">
+                            </picture>
                         </div>
 
                         <div class="info__specs">
@@ -170,7 +173,10 @@
                             </div>
 
                         </div>
-                        <img src="img/buy/buy-package.jpg" class="buy__image" alt="supboard package">
+                        <picture class="buy__image">
+                            <source srcset="img/buy/buy-package.webp" type="image/webp">
+                            <img src="img/buy/buy-package.jpg" class="buy__image" alt="supboard package">
+                        </picture>
                     </div>
                 </div>
             </div>
@@ -212,27 +218,63 @@
                                 reduced pad and our twin Click Fin system make it possible to have a regular sized
                                 iSUP packed into minimal space.
                             </p>
-                            <div class="gallery__small-image-block">
-                                <img src="img/gallery/small/1.jpg" class="gallery__small-image gallery__small-image--1"
-                                    alt="">
-                                <img src="img/gallery/small/2.jpg" class="gallery__small-image gallery__small-image--2"
-                                    alt="">
-                                <img src="img/gallery/small/3.jpg" class="gallery__small-image gallery__small-image--3"
-                                    alt="">
+                            <div class="gallery__small-image-block ">
+                                <picture class="gallery__small-picture gallery__small-picture--1">
+                                    <source srcset="img/gallery/small/1.webp" type="image/webp">
+                                    <img src="img/gallery/small/1.jpg"
+                                        class="gallery__small-image gallery__small-image--1" alt="">
+                                </picture>
+
+                                <picture class="gallery__small-picture gallery__small-picture--2">
+                                    <source srcset="img/gallery/small/2.webp" type="image/webp">
+                                    <img src="img/gallery/small/2.jpg"
+                                        class="gallery__small-image gallery__small-image--2" alt="">
+                                </picture>
+
+                                <picture class="gallery__small-picture gallery__small-picture--3">
+                                    <source srcset="img/gallery/small/3.webp" type="image/webp">
+                                    <img src="img/gallery/small/3.jpg"
+                                        class="gallery__small-image gallery__small-image--3" alt="">
+                                </picture>
                             </div>
                         </div>
 
                         <div class="gallery__big">
-                            <img src="img/gallery/big/1.jpg" class="gallery__big-image gallery__big-image--1" alt="">
-                            <img src="img/gallery/big/2.jpg" class="gallery__big-image gallery__big-image--2" alt="">
-                            <img src="img/gallery/big/3.jpg" class="gallery__big-image gallery__big-image--3" alt="">
-                            <img src="img/gallery/big/4.jpg" class="gallery__big-image gallery__big-image--4" alt="">
-                            <img src="img/gallery/big/5.jpg" class="gallery__big-image gallery__big-image--5" alt="">
+                            <picture class="gallery__big-picture gallery__big-picture--1">
+                                <source srcset="img/gallery/big/1.webp" type="image/webp">
+                                <img src="img/gallery/big/1.jpg" class="gallery__big-image gallery__big-image--1"
+                                    alt="">
+                            </picture>
+
+                            <picture class="gallery__big-picture gallery__big-picture--2">
+                                <source srcset="img/gallery/big/2.webp" type="image/webp">
+                                <img src="img/gallery/big/2.jpg" class="gallery__big-image gallery__big-image--2"
+                                    alt="">
+                            </picture>
+                            <picture class="gallery__big-picture gallery__big-picture--3">
+                                <source srcset="img/gallery/big/3.webp" type="image/webp">
+                                <img src="img/gallery/big/3.jpg" class="gallery__big-image gallery__big-image--3"
+                                    alt="">
+                            </picture>
+                            <picture class="gallery__big-picture gallery__big-picture--4">
+                                <source srcset="img/gallery/big/4.webp" type="image/webp">
+                                <img src="img/gallery/big/4.jpg" class="gallery__big-image gallery__big-image--4"
+                                    alt="">
+                            </picture>
+                            <picture class="gallery__big-picture gallery__big-picture--5">
+                                <source srcset="img/gallery/big/5.webp" type="image/webp">
+                                <img src="img/gallery/big/5.jpg" class="gallery__big-image gallery__big-image--5"
+                                    alt="">
+                            </picture>
                             <span class="gallery__big-text" alt="">Enjoy
                                 <br /> your life
                             </span>
 
-                            <img src="img/gallery/big/7.jpg" class="gallery__big-image gallery__big-image--6" alt="">
+                            <picture class="gallery__big-picture gallery__big-picture--6">
+                                <source srcset="img/gallery/big/6.webp" type="image/webp">
+                                <img src="img/gallery/big/6.jpg" class="gallery__big-image gallery__big-image--6"
+                                    alt="">
+                            </picture>
                         </div>
                     </div>
                 </div>
