--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <!-- head include -->
 @@include('html/partials/head.html', {
@@ -16,14 +16,14 @@
         <div class="intro">
             <div class="container">
                 <div class="intro__inner">
-                    <div class="intro__text-block">
+                    <div class="intro__text-block anim--fade-up">
                         <h1 class="intro__title">RAY AIR POCKET</h1>
                         <p class="intro__text">INFLATABLE SUP BOARD</p>
                         <p class="intro__text">SIZES: 11'6"X31"</p>
                     </div>
 
-                    <p class="intro__text-decor intro__text-decor-1">DOM</p>
-                    <p class="intro__text-decor intro__text-decor-2">FREE</p>
+                    <p class="intro__text-decor intro__text-decor-1 anim--fade-left">DOM</p>
+                    <p class="intro__text-decor intro__text-decor-2 anim--fade-right">FREE</p>
                     <p class="intro__text-decor intro__text-decor-3">PACK SMALL FOR BIG ADVENTURES</p>
                 </div>
             </div>
@@ -35,7 +35,7 @@
                 <div class="section__inner">
                     <div class="section__content">
                         <div class="info__top">
-                            <p class="info__top-text info__top-text--one">
+                            <p class="info__top-text info__top-text--one anim--fade-up">
                                 After our well received Fly Air Pocket Edition we’re adding the respective touring iSUP
                                 to our Range – the Ray Air Pocket Edition! The ultra travel-friendly touring iSUP is
                                 built in a tough but light construction that allows it to be packed into a backpack half
@@ -51,7 +51,7 @@
                                     <span>Play video</span>
                                 </button>
                             </p>
-                            <p class="info__top-text info__top-text--two">
+                            <p class="info__top-text info__top-text--two anim--fade-up">
                                 With a thinner deck pad and tough but flexible construction, the Ray Air Pocket Edition
                                 can be rolled and packed into a much narrower bag, making it extremely easy to store and
                                 transport. Based on our highly versatile Ray Air 11’6’’, the efficient shape is packed
@@ -59,18 +59,18 @@
                                 perfect iSUP for everyone paddling some distance. With its minimal weight and dimensions
                                 nothing comes close the convenient handling of our Pocket Edition iSUPs!
                             </p>
-                            <picture>
+                            <picture class="anim--fade-up">
                                 <source srcset="img/info/supboards.webp" type="image/webp">
                                 <img src="img/info/supboards.png" class="info__top-img" alt="supboards">
                             </picture>
                         </div>
 
                         <div class="info__specs">
-                            <h2 class="info__specs-title">
+                            <h2 class="info__specs-title anim--fade-right">
                                 Specs
                             </h2>
 
-                            <ul class="info__specs-list">
+                            <ul class="info__specs-list anim--fade-left">
                                 <li class="info__specs-item">
                                     <p class="info__specs-item-title">BOARD</p>
                                     <p class="info__specs-item-text">RAY AIR POCKET 11'6"X31"</p>
@@ -118,11 +118,11 @@
         <section class="section section--buy">
             <div class="container">
                 <div class="section__inner">
-                    <h2 class="section__title">
+                    <h2 class="section__title anim--fade-up">
                         Ray Air Pocket
                     </h2>
                     <div class="section__content">
-                        <div class="buy__text-block">
+                        <div class="buy__text-block anim--fade-right">
                             <ul class="buy__text-block-list">
                                 <li class="buy__text-block-item">
                                     <span class="buy__text-block-item-title">CLICK FINS
@@ -173,7 +173,7 @@
                             </div>
 
                         </div>
-                        <picture class="buy__image">
+                        <picture class="buy__image anim--fade-left">
                             <source srcset="img/buy/buy-package.webp" type="image/webp">
                             <img src="img/buy/buy-package.jpg" class="buy__image" alt="supboard package">
                         </picture>
@@ -187,7 +187,7 @@
             <div class="tech__top">
                 <div class="container">
                     <div class="tech__inner">
-                        <h1 class="section__title">MICRO TECHNOLOGY</h1>
+                        <h1 class="section__title anim--fade-up">MICRO TECHNOLOGY</h1>
                         <ol class="tech__list">
                             <li class="tech__list-item">First PVC rail layer </li>
                             <li class="tech__list-item">Second PVC rail layer</li>
@@ -218,7 +218,7 @@
                                 reduced pad and our twin Click Fin system make it possible to have a regular sized
                                 iSUP packed into minimal space.
                             </p>
-                            <div class="gallery__small-image-block ">
+                            <div class="gallery__small-image-block anim--fade-up">
                                 <picture class="gallery__small-picture gallery__small-picture--1">
                                     <source srcset="img/gallery/small/1.webp" type="image/webp">
                                     <img src="img/gallery/small/1.jpg"
