refactoring, img alts

--- a/src/index.html
+++ b/src/index.html
@@ -222,19 +222,22 @@
                                 <picture class="gallery__small-picture gallery__small-picture--1">
                                     <source srcset="img/gallery/small/1.webp" type="image/webp">
                                     <img src="img/gallery/small/1.jpg"
-                                        class="gallery__small-image gallery__small-image--1" alt="">
+                                        class="gallery__small-image gallery__small-image--1"
+                                        alt="woman riding supboard on the lake with clear water">
                                 </picture>
 
                                 <picture class="gallery__small-picture gallery__small-picture--2">
                                     <source srcset="img/gallery/small/2.webp" type="image/webp">
                                     <img src="img/gallery/small/2.jpg"
-                                        class="gallery__small-image gallery__small-image--2" alt="">
+                                        class="gallery__small-image gallery__small-image--2"
+                                        alt="two women riding supboards on the lake with clear water">
                                 </picture>
 
                                 <picture class="gallery__small-picture gallery__small-picture--3">
                                     <source srcset="img/gallery/small/3.webp" type="image/webp">
                                     <img src="img/gallery/small/3.jpg"
-                                        class="gallery__small-image gallery__small-image--3" alt="">
+                                        class="gallery__small-image gallery__small-image--3"
+                                        alt="couple riding supboards on the forest lake">
                                 </picture>
                             </div>
                         </div>
@@ -243,28 +246,28 @@
                             <picture class="gallery__big-picture gallery__big-picture--1">
                                 <source srcset="img/gallery/big/1.webp" type="image/webp">
                                 <img src="img/gallery/big/1.jpg" class="gallery__big-image gallery__big-image--1"
-                                    alt="">
+                                    alt="couple carry supboards to water">
                             </picture>
 
                             <picture class="gallery__big-picture gallery__big-picture--2">
                                 <source srcset="img/gallery/big/2.webp" type="image/webp">
                                 <img src="img/gallery/big/2.jpg" class="gallery__big-image gallery__big-image--2"
-                                    alt="">
+                                    alt="man and woman riding supboards">
                             </picture>
                             <picture class="gallery__big-picture gallery__big-picture--3">
                                 <source srcset="img/gallery/big/3.webp" type="image/webp">
                                 <img src="img/gallery/big/3.jpg" class="gallery__big-image gallery__big-image--3"
-                                    alt="">
+                                    alt="man carry supboard to water">
                             </picture>
                             <picture class="gallery__big-picture gallery__big-picture--4">
                                 <source srcset="img/gallery/big/4.webp" type="image/webp">
                                 <img src="img/gallery/big/4.jpg" class="gallery__big-image gallery__big-image--4"
-                                    alt="">
+                                    alt="couple carry supboards after ride">
                             </picture>
                             <picture class="gallery__big-picture gallery__big-picture--5">
                                 <source srcset="img/gallery/big/5.webp" type="image/webp">
                                 <img src="img/gallery/big/5.jpg" class="gallery__big-image gallery__big-image--5"
-                                    alt="">
+                                    alt="woman riding supboard, stopped near pier">
                             </picture>
                             <span class="gallery__big-text" alt="">Enjoy
                                 <br /> your life
@@ -273,7 +276,7 @@
                             <picture class="gallery__big-picture gallery__big-picture--6">
                                 <source srcset="img/gallery/big/6.webp" type="image/webp">
                                 <img src="img/gallery/big/6.jpg" class="gallery__big-image gallery__big-image--6"
-                                    alt="">
+                                    alt="man riding supboard on the wide lake">
                             </picture>
                         </div>
                     </div>
